# BKI-FlyScan-Sim

./: .gitignore  AUTONOMOUS_NAVIGATION_FIX_SUMMARY.md  README.md  cmd.bash  gz_topics.txt  jetson.txt  mav.py
JETSON-CONFIG/: docker-compose.yml
JETSON-CONFIG/backend/: Dockerfile  main.py  network_manager.py  requirements.txt
JETSON-CONFIG/frontend/: index.html  script.js
JETSON-CONFIG/scripts/: init.sh  setup_hotspot.sh
QR-reader/BKI-CodeReader-2025/: QR_processing.py  README.md  main.py  output.csv  requirements.txt
QR-reader/BKI-CodeReader-2025/rtmp/: index.js  package-lock.json  package.json
docs/: FRONTIER_EXPLORATION_ANALYSIS.md  FRONTIER_EXPLORATION_FLOWCHARTS.md  FRONTIER_EXPLORATION_README.md  FRONTIER_EXPLORER_SUMMARY.md
images/mermaid/: full_uav_seq.md  onboard_proc.md  seq.md  server_processing.md
src/flyscan_bridges/: CMakeLists.txt  README.md  package.xml
src/flyscan_bridges/include/flyscan_bridges/: odom_bridge.hpp  px4_ros_bridge.hpp
src/flyscan_bridges/src/: odom_bridge.cpp  px4_ros_bridge.cpp
src/flyscan_bringup/: CMakeLists.txt  README.md  package.xml
src/flyscan_bringup/config/: gz_bridge_config.yaml  rtabmap_config.yaml
src/flyscan_bringup/launch/: flyscan.launch.py  px4_controller_composed.launch.py  rtabmap_3d.launch.py  utils.launch.py
src/flyscan_common/: CMakeLists.txt  README.md  package.xml
src/flyscan_common/include/flyscan_common/: constants.hpp  enums.hpp  math_util.hpp  request_util.hpp  sigint_handler.hpp  string_util.hpp  types.hpp  util.hpp
src/flyscan_core/: CMakeLists.txt  README.md  package.xml
src/flyscan_core/include/flyscan_core/: base_node.hpp  constants.hpp  life_monitor.hpp
src/flyscan_core/src/: base_node.cpp  life_monitor.cpp
src/flyscan_drone_controller/: CMakeLists.txt  README.md  package.xml
src/flyscan_drone_controller/config/: altitude_config.yaml  px4_controller.yaml
src/flyscan_drone_controller/include/flyscan_drone_controller/: constants.hpp  controller_node.hpp  px4_controller.hpp  px4_ros_bridge.hpp  px4_ros_node.hpp  teleop_node.hpp  terminal_controller.hpp  transform.hpp  util.hpp
src/flyscan_drone_controller/launch/: px4_controller.launch.py
src/flyscan_drone_controller/src/: controller_node.cpp  main.cpp  px4_controller.cpp  px4_controller_main.cpp  px4_ros_bridge.cpp  px4_ros_node.cpp  px4_ros_node_main.cpp  teleop_node.cpp  teleop_node_main.cpp  terminal_controller.cpp  util.cpp
src/flyscan_exploration/: CMakeLists.txt  README.md  REFACTOR.md  WAYPOINT_MISSION_README.md  frontier_exploration_readme.md  package.xml
src/flyscan_exploration/config/: frontier_explorer.yaml  sample_mission.yaml
src/flyscan_exploration/include/flyscan_exploration/: frontier_explorer.hpp  waypoint_mission.hpp
src/flyscan_exploration/launch/: frontier_exploration.launch.py  waypoint_mission.launch.py
src/flyscan_exploration/src/: frontier_explorer.cpp  waypoint_mission.cpp
src/flyscan_interfaces/: CMakeLists.txt  package.xml
src/flyscan_interfaces/action/: ComputeFrontiers.action  FollowPath.action  NavigateToPose3D.action
src/flyscan_interfaces/msg/: BoundingBox.msg  ControllerEvent.msg  Detection.msg  DetectionArray.msg  Frontier.msg  FrontierArray.msg  NodeHeartbeat.msg  NodeInfo.msg  TeleopCommand.msg  VehicleState.msg
src/flyscan_interfaces/srv/: GetRegisteredNodes.srv  NavigateToPose.srv  QueryMap.srv  RegisterNode.srv  RequestRecovery.srv  SetControlMode.srv  UnregisterNode.srv
src/flyscan_mapserver/: CMakeLists.txt  package.xml
src/flyscan_navigation/: CMakeLists.txt  package.xml
src/flyscan_navigation/include/flyscan_navigation/: collision_checker.hpp  navigator.hpp  path_planner.hpp
src/flyscan_navigation/src/: collision_checker.cpp  navigator.cpp  navigator_node.cpp  path_planner.cpp
src/flyscan_perception/: CMakeLists.txt  README.md  convert_yolo_to_onnx.py  package.xml
src/flyscan_perception/config/: semantic_perception.yaml
src/flyscan_perception/include/flyscan_perception/: constants.hpp  semantic_perception.hpp  video_streamer.hpp
src/flyscan_perception/launch/: semantic_perception.launch.py
src/flyscan_perception/src/: semantic_perception.cpp  video_streamer.cpp
src/flyscan_sim/: CMakeLists.txt  README.md  package.xml  setup.py
src/flyscan_sim/config/: bridge_config.yaml  rtabmap_config.yaml  rviz_config.yaml
src/flyscan_sim/flyscan_sim/: __init__.py  video_streamer.py
src/flyscan_sim/include/flyscan_sim/: marker_publisher.hpp  video_streamer.hpp  visualization_node.hpp
src/flyscan_sim/launch/: bridge.launch.py  flyscan.launch.py  px4_controller.launch.py  px4_qgc.launch.py  px4_sim.launch.py  rtabmap.launch.py  rtabmap_3d.launch.py  rviz.launch.py  rviz_utils.launch.py  slam.launch.py  slam_only.launch.py  teleop.launch.py  utils.launch.py
src/flyscan_sim/rviz/: flyscan_rtabmap.rviz
src/flyscan_sim/src/: marker_publisher.cpp  video_streamer.cpp  visualization_node.cpp
src/flyscan_sim/worlds/: warehouse.sdf  warehouse_outdoor.sdf
src/flyscan_simulation/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/flyscan_simulation/flyscan_simulation/: spawn_stock.py  video_streamer.py  visualization_node.py
src/flyscan_simulation/launch/: px4_sim.launch.py
src/flyscan_simulation/worlds/: warehouse_outdoor.sdf
src/flyscan_simulation/worlds/models/: model_poses_in_world_frame.csv  qr_stocks.sdf
src/flyscan_vision/: CMakeLists.txt  package.xml
src/flyscan_vision/include/flyscan_vision/: slam_node.hpp  vio_node.hpp
src/flyscan_vision/src/: odom_bridge.cpp  slam_node.cpp  vio_node.cpp
utils/: convert_yolo_to_onnx.py  requirements.txt  save_ros2_data.py  topic_tracking.yaml
