<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flyscan_common</name>
  <version>0.0.0</version>
  <description>Common libraries for FlyScan system</description>
  <maintainer email="trung.do853@hcmut.edu.vn">ttd</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_action</depend>
  <depend>lifecycle_msgs</depend>

  <depend>flyscan_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
